Changelog
=========

2.0 (Unreleased)
----------------

- Made the tests independent of CMFPlone and avoid a spurious import for the
  `safe_unicode` method.
  [hannosch]

- Moved the IWorkflowChain interface and default adapter from CMFPlone into
  this package.
  [hannosch]

1.2 (Unreleased)
----------------

- Use our own PloneMessageFactory.
  [hannosch]

- Fixed deprecation warnings for use of Globals.
  [hannosch]

- Specified package dependencies.
  [hannosch]

- Display the userid in addition to the fullname if they are different.
  Fixes http://dev.plone.org/plone/ticket/8251
  [csenger]  

- Adjusted a test to work with Zope 2.12.
  [hannosch]

- Use safe_unicode() instead of str() to fix #7576. Fixes
  http://dev.plone.org/plone/ticket/8371 .
  [csenger]

1.1.5 - August 18th, 2008
-------------------------

- Correct UnicodeDecodeError in sharing-view when users or groups with 
  non-ascii characters are searched. All parameters fetched from the 
  request are strings, but _(u'Logged-in users') isn't. A string with 
  non-ascii characters and a unicode-string can't be joined. Fixes 
  http://dev.plone.org/plone/ticket/7576
  [csenger]

1.1.4 - July 24, 2008
---------------------

- Keep the icons for inherited and global roles when updating the sharing
  page after a search. This fixes http://dev.plone.org/plone/ticket/8313 .
  [wichert]

- Sort the principals in the sharing page. Before they could reorder
  randomly when saving changes.
  [wichert]

- Fix a logic error in sharing page view: role changes would appear to be
  lost when saving a view, while the were really applied. This fixes
  http://dev.plone.org/plone/ticket/8295 .
  [wichert]


1.1.3 - July 7th, 2008
----------------------

- Modify the inline (kss) search option in the sharing page to only search
  and not update the roles and search. This behaviour was unintuitive and
  possible very very slow.
  [wichert]

- Update the sharing page to do nothing if the new set of roles is the