@@ -32,9 +32,7 @@ setup(name='plone.app.workflow',
       ),
       install_requires=[
         'setuptools',
-        'kss.core',
         'plone.memoize',
-        'plone.app.kss',
         'zope.component',
         'zope.i18nmessageid',
         'zope.interface',
